# Seshat

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
configs/: base.yaml  base_qlora.yaml
configs/data/: pipeline.yaml
configs/hardware/: amd_aimax_395.yaml
configs/inference/: serving.yaml
configs/languages/: template.yaml
configs/training/: qlora_qwen3_14b.yaml  qlora_qwen3_80b.yaml
docker/: Dockerfile.train  docker-compose.yml
docs/: DATA_REQUIREMENTS.md  HARDWARE_NOTES.md  TRAINING_GUIDE.md
scripts/: download_base_model.py  evaluate.py  export_gguf.sh  prepare_data.py  train.py  translate.py
src/seshat/: __init__.py
src/seshat/data/: __init__.py  augmenters.py  format.py  formatters.py  loaders.py  processors.py  tokenizer.py
src/seshat/inference/: __init__.py  translator.py
src/seshat/training/: __init__.py  trainer.py
tests/: test_loaders.py
